# cups-pk-helper-debian

./: .gitignore  AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  cups-pk-helper.doap  cups-pk-helper_0.1.0.orig.tar.bz2.delta  cups-pk-helper_0.1.0.orig.tar.bz2.id  cups-pk-helper_0.1.2.orig.tar.bz2.delta  cups-pk-helper_0.1.2.orig.tar.bz2.id  cups-pk-helper_0.2.0.orig.tar.bz2.delta  cups-pk-helper_0.2.0.orig.tar.bz2.id  cups-pk-helper_0.2.1.orig.tar.bz2.delta  cups-pk-helper_0.2.1.orig.tar.bz2.id  cups-pk-helper_0.2.3.orig.tar.xz.delta  cups-pk-helper_0.2.3.orig.tar.xz.id  cups-pk-helper_0.2.5.orig.tar.xz.delta  cups-pk-helper_0.2.5.orig.tar.xz.id  cups-pk-helper_0.2.6.orig.tar.xz.delta  cups-pk-helper_0.2.6.orig.tar.xz.id
debian/: changelog  control  copyright  rules  watch
debian/patches/: 0001-Make-sure-O_NOFOLLOW-can-be-used.patch  0001-Use-g_strjoinv-instead-of-g_strjoin.patch  0002-Honor-file-permissions-when-uploading-downloading-fi.patch  0002-autoreconf.patch  Add-default-statements-to-silence-compiler-warnings.patch  Don-t-compare-signed-and-unsigned-int.patch  Don-t-use-g_type_init-on-recent-glib.patch  Drop-deprecated-and-unused-GNOME_MAINTAINER_MODE_DEFINES.patch  Use-AX_COMPILER_FLAGS-instead-of-GNOME_COMPILE_WARNINGS.patch  series
patches/: system-config-printer.patch
po/: LINGUAS  POTFILES.in  README.transifex  ca.po  cs.po  cups-pk-helper.pot  da.po  de.po  en.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  kk.po  ko.po  lv.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
src/: Makefile.am  Makefile.in  cph-iface-mechanism.c  cph-iface-mechanism.h  cups-pk-helper-mechanism.c  cups-pk-helper-mechanism.h  cups-pk-helper-mechanism.xml  cups.c  cups.h  main.c  org.opensuse.CupsPkHelper.Mechanism.conf  org.opensuse.CupsPkHelper.Mechanism.service.in  org.opensuse.cups-pk-helper.Mechanism.conf  org.opensuse.cups-pk-helper.Mechanism.service.in  org.opensuse.cups-pk-helper.mechanism.policy.in  org.opensuse.cupspkhelper.mechanism.policy.in  test-cups-pk.c  test-cups-pk.py  test-cups.c
